# xcb_skills

cross-platform-bench/: SKILL.md
cross-platform-bench/agents/: openai.yaml
cross-platform-bench/assets/sbench-multi-bench-leaf/: CMakeLists.txt
cross-platform-bench/assets/sbench-multi-bench-leaf/src/: hello_bench.cpp  main.cpp
cross-platform-bench/assets/sbench-single-bench/src/: main.cpp
cross-platform-bench/assets/xcbench-multi-bench-leaf/include/hello_bench/: hello_bench.hpp
cross-platform-bench/assets/xcbench-multi-bench-leaf/src/: main.cpp
cross-platform-bench/assets/xcbench-single-bench/src/: main.cpp
cross-platform-bench/assets/xcbench-single-bench/tests/: test_smoke.cpp
cross-platform-bench/references/: bench-io.md  common-implementation.md  dependency-discovery.md  file-organization.md  jit-and-libxcpu.md  project-creation.md  sbench-registration.md  scheduler-control.md
xbundle-framework/: SKILL.md
xbundle-framework/agents/: openai.yaml
xbundle-framework/references/: build-and-run.md  dependency-discovery.md  module-runtime.md  project-composition.md  template-workflow.md
